fix: improved readability and spacing

--- a/styles/Home/Home.module.css
+++ b/styles/Home/Home.module.css
@@ -20,7 +20,8 @@
 
 .drivenByPassion,.visionTitle, .originsTitle {
     font-weight: 600;
-    font-size: 65px;
+    font-size: 62px;
+    line-height: 62px;
 }
 
 .welcomeTo, .vision, .origins, .project {
@@ -32,7 +33,7 @@
 .titleButtons,.visionButtons {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
     padding-right: 10px;
@@ -43,6 +44,10 @@
     min-width: 230px;
     border: none;
     color: #061E33;
+}
+
+.showMenu {
+    cursor: pointer;
 }
 
 .aboutUsTitleButton,.galleryVisionButton {
@@ -74,8 +79,7 @@
 .awards {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-evenly;
     max-width: 1100px;
     width: 100%;
     margin: 0 20px;
@@ -83,6 +87,10 @@
 
 .outstandingAward {
     opacity: 1;
+    margin: 1rem;
+    width: 15vw;
+    height: auto;
+    filter: grayscale(100%);
 }
 
 /* third section - vision */
@@ -102,7 +110,7 @@
     justify-content: space-between;
     align-items: flex-start;
     padding: 40px;
-    height: 100%;
+    height: auto;
     width: 60%;
 }
 
@@ -133,6 +141,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-top: 1rem;
     width: 100%;
 }
 
@@ -205,7 +214,6 @@
 .project {
     padding: 0 20px;
     max-height: 50vh;
-    mask-image: linear-gradient(to bottom, white, white 30%, transparent);
 }
 
 /* sixth section: apply */
@@ -270,5 +278,108 @@
     }
     100% {
         transform: rotateY(0deg) translateY(-2px);
+    }
+}
+
+@media screen and (max-width: 1100px) {
+
+    .peopleVisionButton, .galleryVisionButton,
+    .joinUsTitleButton, .aboutUsTitleButton {
+        min-width: 200px;
+        width: 50%;
+        max-width: 200px;
+        margin-bottom: 3rem;
+        padding: .8rem;
+    }
+
+
+    .outstandingAward {
+        width: 18vw;
+    }
+
+    .visionImage {
+        width: calc(40% - 6vw);
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .awards {
+        flex-wrap: wrap;
+    }
+
+    .outstandingAward {
+        width: 30vw;
+        min-width: 200px;
+    }
+
+    .drivenByPassion {
+        font-size: 40px;
+    }
+
+    .textJoinOurChapter {
+        font-size: 36px;
+        line-height: 36px;
+    }
+
+    .visionContainer {
+        flex-direction: column;
+    }
+
+    .visionLeft {
+        width: 100%;
+    }
+
+    .visionImage {
+        margin: 0;
+        width: 100%;
+    }
+
+    .peopleVisionButton, .galleryVisionButton,
+    .joinUsTitleButton, .aboutUsTitleButton {
+        min-width: 120px;
+        width: 50%;
+        max-width: 200px;
+        margin-bottom: 3rem;
+        padding: .8rem;
+    }
+
+    .projectsCards {
+        flex-direction: column;
+    }
+
+    .projectsCenter, .projectsLeft, .projectsRight {
+        width: 100%;
+    }
+
+    .visionLeft {
+        padding: 0;
+    }
+
+    .originsContainer {
+        flex-direction: column;
+    }
+
+    .originsImage {
+        width: 100%;
+        margin: 0;
+    }
+
+    .originsTitle {
+        margin: 1rem 0;
+    }
+
+    .originsRight {
+        width: 100%;
+        padding: 0;
+    }
+}
+
+
+@media screen and (max-width: 440px) {
+
+    .drivenByPassion {
+        line-height: 35px;
+        font-size: 30px;
     }
 }
